--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.15.14",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "react": "^18.2.0",
